<resources>
    <string name="app_name">Seller</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="zipcode">zipcode</string>
    <string name="email">email</string>
    <string name="nickname">nickname</string>
    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in or register</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="welcome">"welcome!"</string>
    <string name="invalid_username">not a valid username</string>
    <string name="invalid_password">password must be >5 characters</string>
    <string name="login_failed">"login failed"</string>
    <string name="confirm">confirm</string>
    <string name="login">Login</string>
</resources>